buildpacks/nodejs/tests/snapshots/pnpm_unknown_version.snap
---
source: crates/test_support/src/lib.rs
---
## Heroku Node.js

- Checking Node.js version
  - Node.js version not specified, using `22.x`
  - Resolved Node.js version: `22.16.0`
- Installing Node.js distribution
  - Downloading Node.js `22.16.0 (<arch>)` from https://nodejs.org/download/release/v22.16.0/node-v22.16.0-<arch>.tar.gz ... (<time_elapsed>)
  - Verifying checksum
  - Extracting Node.js `22.16.0 (<arch>)`
  - Installing Node.js `22.16.0 (<arch>)` ... (<time_elapsed>)

! Corepack Requirement Error
!
! A pnpm lockfile (`pnpm-lock.yaml`) was detected, but the version of `pnpm` to install could not be determined.
!
! `pnpm` may be installed via the `heroku/nodejs-corepack` buildpack. It requires the desired `pnpm` version to be set via the `packageManager` key in `package.json`.
!
! To set `packageManager` in `package.json` to the latest `pnpm`, run:
!
! `corepack enable`
! `corepack use pnpm@*`
!
! Then commit the result, and try again.
ERROR: failed to build: executing lifecycle: failed with status code: 51
