buildpacks/nodejs/tests/snapshots/test_dependencies_and_missing_lockfile_errors.snap
---
source: crates/test_support/src/lib.rs
---
===> ANALYZING
Image with name "<image-name>" not found
===> DETECTING
heroku/nodejs <buildpack-version>
===> RESTORING
<restoring-output>
===> BUILDING

## Heroku Node.js

- Checking Node.js version
  - Detected Node.js version range: `>=20.0.0 <21.0.0-0`
  - Resolved Node.js version: `20.19.4`
- Installing Node.js distribution
  - GET https://nodejs.org/download/release/v20.19.4/node-v20.19.4-<arch>.tar.gz ... (OK)
  - Downloading ... (<time_elapsed>)
  - Verifying checksum
  - Extracting Node.js `20.19.4 (<arch>)`
  - Installing Node.js `20.19.4 (<arch>)` ... (<time_elapsed>)

! Missing lockfile
!
! Couldn't determine Node.js package manager. Package manager lockfile not found.
!
! A lockfile from a supported package manager is required to install Node.js dependencies. The package.json for this project specifies dependencies, but there isn't a lockfile.
!
! - To use npm to install dependencies, run `npm install`. This command will generate a `package-lock.json` lockfile.
! - To use yarn to install dependencies, run `yarn install`. This command will generate a `yarn.lock` lockfile.
! - To use pnpm to install dependencies, run `pnpm install`. This command will generate a `pnpm-lock.yaml` lockfile.
!
! Ensure the resulting lockfile is committed to the repository, then try again.

ERROR: failed to build: exit status 1
